--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,15 +1,19 @@
-node {
+// Run on 'cabbage' node.
+node('cabbage') {
    // Get the maven tool.
-   // ** NOTE: This 'maven' maven tool must be configured
+   // ** NOTE: This 'maven3' maven tool must be configured
    // **       in the global configuration.           
-   def mvnHome = tool 'maven'
+   def mvnHome = tool 'maven3'
 
-   env.JAVA_HOME = tool 'jdk 1.7'
+   // Get the jdk tool.
+   // ** NOTE: This 'jdk7_80' jdk tool must be configured
+   // **       in the global configuration.           
+   env.JAVA_HOME = tool 'jdk7_80'
 
    // Mark the code build 'stage'....
    stage 'Build'
    // Run the maven build
-   bat "${mvnHome}/bin/mvn clean package exec:java"
+   sh "${mvnHome}/bin/mvn clean package exec:java"
 
    // Mark the archive 'stage'....
    stage 'Archive'
