java (jdk) and mvn are supposed to be on the slave already

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,19 +1,11 @@
 // Run on 'cabbage' node.
 node('cabbage') {
-   // Get the maven tool.
-   // ** NOTE: This 'maven3' maven tool must be configured
-   // **       in the global configuration.           
-   def mvnHome = tool 'maven3'
-
-   // Get the jdk tool.
-   // ** NOTE: This 'jdk7_80' jdk tool must be configured
-   // **       in the global configuration.           
-   env.JAVA_HOME = tool 'jdk7_80'
+   // java (jdk) and mvn are supposed to be in the path env of the node running the job
 
    // Mark the code build 'stage'....
    stage 'Build'
    // Run the maven build
-   sh "${mvnHome}/bin/mvn clean package exec:java"
+   sh "mvn clean package exec:java"
 
    // Mark the archive 'stage'....
    stage 'Archive'
